// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using SistemaMoedas.Data;

#nullable disable

namespace SistemaMoedas.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20241105192146_new")]
    partial class @new
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "7.0.17")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("SistemaMoedas.Classes.Aluno", b =>
                {
                    b.Property<int>("CodigoAluno")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasColumnOrder(0);

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CodigoAluno"));

                    b.Property<string>("CpfAluno")
                        .IsRequired()
                        .HasMaxLength(14)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(3);

                    b.Property<int>("CursoAluno")
                        .HasColumnType("int")
                        .HasColumnOrder(10);

                    b.Property<DateTime>("DataCadastroAluno")
                        .HasColumnType("datetime2")
                        .HasColumnOrder(8);

                    b.Property<string>("EmailAluno")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(1);

                    b.Property<string>("EnderecoAluno")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(2);

                    b.Property<int>("InstituicaoAluno")
                        .HasColumnType("int")
                        .HasColumnOrder(9);

                    b.Property<string>("NomeAluno")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(5);

                    b.Property<int>("QuantidadeMoedasAluno")
                        .HasColumnType("int")
                        .HasColumnOrder(7);

                    b.Property<string>("RGAluno")
                        .IsRequired()
                        .HasMaxLength(8)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(4);

                    b.Property<string>("SenhaAluno")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(6);

                    b.HasKey("CodigoAluno");

                    b.ToTable("Alunos");
                });

            modelBuilder.Entity("SistemaMoedas.Classes.Curso", b =>
                {
                    b.Property<int>("CodigoCurso")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasColumnOrder(0);

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CodigoCurso"));

                    b.Property<string>("NomeCurso")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnOrder(1);

                    b.HasKey("CodigoCurso");

                    b.ToTable("Curso");
                });

            modelBuilder.Entity("SistemaMoedas.Classes.Instituicao", b =>
                {
                    b.Property<int>("CodigoInstituicao")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasColumnOrder(0);

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CodigoInstituicao"));

                    b.Property<string>("NomeInstituicao")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnOrder(1);

                    b.HasKey("CodigoInstituicao");

                    b.ToTable("Instituicoes");
                });

            modelBuilder.Entity("SistemaMoedas.Classes.Parceiro", b =>
                {
                    b.Property<int>("CodigoParceiro")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasColumnOrder(0);

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CodigoParceiro"));

                    b.Property<string>("CnpjParceiro")
                        .IsRequired()
                        .HasMaxLength(22)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(2);

                    b.Property<DateTime>("DataCadastroParceiro")
                        .HasColumnType("datetime2")
                        .HasColumnOrder(8);

                    b.Property<string>("EmailParceiro")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(3);

                    b.Property<string>("NomeParceiro")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnOrder(1);

                    b.Property<string>("SenhaParceiro")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("VARCHAR")
                        .HasColumnOrder(4);

                    b.HasKey("CodigoParceiro");

                    b.ToTable("Parceiro");
                });

            modelBuilder.Entity("SistemaMoedas.Classes.Professor", b =>
                {
                    b.Property<int>("CodigoProfessor")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int")
                        .HasColumnOrder(0);

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CodigoProfessor"));

                    b.Property<int>("CpfProfessor")
                        .HasColumnType("int")
                        .HasColumnOrder(1);

                    b.Property<int>("DepartamentoProfessor")
                        .HasColumnType("int")
                        .HasColumnOrder(2);

                    b.Property<int>("InstituicaoProfessor")
                        .HasColumnType("int")
                        .HasColumnOrder(3);

                    b.Property<int>("MoedasProfessor")
                        .HasColumnType("int")
                        .HasColumnOrder(4);

                    b.HasKey("CodigoProfessor");

                    b.ToTable("Professor");
                });
#pragma warning restore 612, 618
        }
    }
}
